[gd_scene load_steps=4 format=3 uid="uid://dyu67bdyfohp3"]

[ext_resource type="Script" uid="uid://bx0mcxy6l4s47" path="res://scene/paths_scroll_container.gd" id="1_8i2mp"]
[ext_resource type="PackedScene" uid="uid://bonfwmtk5mci0" path="res://scene/args_set.tscn" id="1_dyrvu"]
[ext_resource type="Script" uid="uid://p84loimbklg3" path="res://scene/paths_args_container.gd" id="1_sb7hf"]

[node name="PathArgsContainer" type="VBoxContainer"]
offset_right = 645.0
offset_bottom = 307.0
script = ExtResource("1_sb7hf")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paths"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PathsScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("1_8i2mp")

[node name="ArgsSetContainer" type="VBoxContainer" parent="PathsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
metadata/_edit_lock_ = true

[node name="ArgsSet" parent="PathsScrollContainer/ArgsSetContainer" instance=ExtResource("1_dyrvu")]
layout_mode = 2

[node name="ArgsSet2" parent="PathsScrollContainer/ArgsSetContainer" instance=ExtResource("1_dyrvu")]
layout_mode = 2

[node name="ArgsSet3" parent="PathsScrollContainer/ArgsSetContainer" instance=ExtResource("1_dyrvu")]
layout_mode = 2

[node name="ArgsSet4" parent="PathsScrollContainer/ArgsSetContainer" instance=ExtResource("1_dyrvu")]
layout_mode = 2
